# ckb-auth-examples

./: .gitignore  Makefile  README.md
.github/workflows/: all.yml  c.yml  rust.yml
C/: Makefile  Makefile.clang  auth_c_example.c
Rust/: Cargo.toml  README.md  capsule.toml
Rust/contracts/auth-rust-example/: Cargo.toml
Rust/contracts/auth-rust-example/src/: entry.rs
Rust/tests/: Cargo.toml  build.rs
Rust/tests/src/: lib.rs  tests.rs
